--- a/settings.json
+++ b/settings.json
@@ -11,7 +11,7 @@
       "name": "Erik",
       "phonenumber": "+16304647518",
       "subscriptions": [
-        "Williamsburg",
+        "Williamsburg"
       ]
     }
   ],
